# hlimgui

./: .gitignore  LICENSE  Main.hx  README.md  compile.hxml  haxelib.json
extension/: CMakeLists.txt  clipping.cpp  columns.cpp  context.cpp  convert.cpp  convert.h  cursor.cpp  demo.cpp  docking.cpp  focus.cpp  hlimgui.cpp  hlimgui.sln  hlimgui.vcxproj  hlimgui.vcxproj.filters  id.cpp  io.cpp  logging.cpp  parameters_stack.cpp  parameters_stacks.cpp  popup.cpp  struct.cpp  struct.h  style.cpp  styles.cpp  tab.cpp  tooltip.cpp  tooltips.cpp  utilities_clipboard.cpp  utilities_color.cpp  utilities_ini.cpp  utilities_keyboard.cpp  utilities_misc.cpp  utilities_mouse.cpp  utilities_text.cpp  utils.cpp  utils.h  widgets_combo.cpp  widgets_drag.cpp  widgets_input.cpp  widgets_listbox.cpp  (+14 more)
extension/imgui/: imconfig.h
imgui/: ImGui.hx  ImGuiDrawable.hx
src/: Main.hx
